Bug 126042 - Title and extension version number are mangled together in extension dialog
Summary: Title and extension version number are mangled together in extension dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.2
Keywords: bibisected, bisected, regression
: 126688 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-06-21 16:47 UTC by Telesto
Modified: 2019-09-17 10:08 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (52.07 KB, image/jpeg)
2019-06-21 16:48 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-06-21 16:47:17 UTC
Description:
Title and extension version number are mangled together in extension dialog

Steps to Reproduce:
1. Open Writer
2. Tools -> Extension Manager

Actual Results:
Title and extension version number are mangled together in extension dialog

Expected Results:
Should be so


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.4.0.0.alpha0+ (x86)
Build ID: 60271c4433372097ef5ecc74e522532ebf5af8e0
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-06-19_05:53:39
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: threaded
Comment 1 Telesto 2019-06-21 16:48:03 UTC
Created attachment 152350 [details]
Screenshot
Comment 2 Durgapriyanka 2019-06-21 20:04:06 UTC
Thank you for reporting the bug.

I cannot reproduce the bug in
LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4

In Version: 6.3.0.0.alpha0+
Build ID: b6b28931435e44aca92b8c0e1659f701e3ed1a87
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-01-30_06:57:04
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

The Extension dialog box is empty.
Comment 3 Telesto 2019-06-21 20:11:02 UTC
For the record, I expect some installed extension ;-).
Comment 4 Martin Srebotnjak 2019-08-03 16:55:11 UTC
*** Bug 126688 has been marked as a duplicate of this bug. ***
Comment 5 raal 2019-08-25 15:34:40 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 23898efef5f74ee171aaffced1f8fab1aa56ecd2 is the first bad commit
commit 23898efef5f74ee171aaffced1f8fab1aa56ecd2
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Jun 14 21:19:42 2019 +0200

    source daa1ab5d59e3cee21324cdfa1329f2d36c4eda05

author	Caolán McNamara <caolanm@redhat.com>	2019-06-12 11:32:40 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-06-14 16:33:45 +0200
commit daa1ab5d59e3cee21324cdfa1329f2d36c4eda05 (patch)
tree 70b514e9cf6ce7a14a00a331cb1af52be3d8694b
parent 5128f7bf6c2304d07d6b1829977b619d29c1a46a (diff)
weld ExtMgrDialog and UpdateRequiredDialog
Comment 6 Caolán McNamara 2019-08-25 20:17:19 UTC
I imagine we must be doing something like measuring the place where to put the version number with a non-bold font and then writing the name in bold font
Comment 7 Commit Notification 2019-09-02 10:06:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/1485bcc796dd8bd53762368ec4a1345ddb7cda72%5E%21

Resolves: tdf#126042 measure text width with the bold font it will render with

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2019-09-02 10:11:41 UTC
fixed in master, backport to 6-3 in gerrit
Comment 9 Commit Notification 2019-09-03 08:36:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/e4e6aa95e84314173518137eba988623125712b9%5E%21

Resolves: tdf#126042 measure text width with the bold font it will render with

It will be available in 6.3.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2019-09-17 10:08:40 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: c56bf1479cc71d1a2b0639f6383e90c1f7e3655b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!