Resolves: tdf#126042 measure text width with the bold font it will render with

Change-Id: I81cc0351e652c632bd85efa6dacb36be66fcfb3c